# SD24O_Practica_REST

./: api.py  pyproject.toml
WindowsPowerShell/: profile.ps1
orm/: config.py  esquemas.py  modelos.py  repo.py
