[tool.poetry]
name = "sd240_practica_rest"
version = "0.1.0"
description = "Example of FastAPI deployment to render.com --SisDis"
authors = ["Maximiliano Casas Rodríguez <maximiliano.casas@cua.uam>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.5"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.17"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"